# geoipsed

./: .gitignore  BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  CLAUDE.md  COMPLETION_STATUS.md  Cargo.toml  DOCUMENTATION_INDEX.md  GUIDE.md  README.md  REFACTORING_SUMMARY.md  benchmark.sh  justfile  plan.md
.github/workflows/: docs.yml  publish-ipextract.yml  publish.yml  rust.yml
benches/: benchmarks.rs
crates/ip-extract/: Cargo.toml  README.md  build.rs
crates/ip-extract/benches/: ip_benchmark.rs
crates/ip-extract/examples/: scope_id_test.rs  simple_extraction.rs
crates/ip-extract/src/: lib.rs  tag.rs
crates/ip-extract/tests/: extract_tests.rs
crates/ip-extractor/: Cargo.toml
crates/ip-extractor/src/: lib.rs  tag.rs
crates/ipextract-py/: Cargo.toml  README.md  benchmark_re_vs_rust.py  pyproject.toml
crates/ipextract-py/python/ipextract/: __init__.py  __init__.pyi
crates/ipextract-py/src/: lib.rs
crates/ipextract-py/tests/: test_ipextract.py
crates/justips/: Cargo.toml  README.md
crates/justips/src/: main.rs
docs/: book.toml
docs/plans/: 2026-02-27-ipextract-python-bindings-design.md
docs/src/: SUMMARY.md  guide.md  index.md  ip-extract.md  justips.md  python.md  subcrates.md
examples/: profile_lookup.rs  tag_example.rs
python/: geoipsed.py  requirements.txt
src/: error.rs  extractor.rs  files.rs  geoip.rs  input.rs  lib.rs  main.rs  mmdb.rs  tag.rs  template.rs  test.py
tests/: cli.rs  integration_test.rs
tests/maxmind/: mock_test.mmdb
