[package]
name = "geoipsed"
version = "0.1.9"                                                       #:version
authors = ["Eric Hutchins"]
description = "Inline decoration of IPv4 and IPv6 address geolocations"
homepage = "https://github.com/erichutchins/geoipsed"
repository = "https://github.com/erichutchins/geoipsed"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["cli", "geoip", "dfir", "regex"]
license = "Unlicense OR MIT"
edition = "2021"

[lib]
name = "geoipsed"
path = "src/lib.rs"

[[bin]]
name = "geoipsed"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = false
debug-assertions = false
panic = "abort"
incremental = false
strip = true

[profile.dev-optimized]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.101"
camino = "1.2.2"
clap = { version = "4.5.57", features = ["derive", "env", "unicode", "cargo"] }
maxminddb = { version = "0.27.1", features = ["mmap"] }
regex = "1.12.3"
regex-syntax = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustc-hash = "1.1.0"
hashbrown = "0.16.1"
termcolor = "1.4.1"
thiserror = "2.0"
bstr = "1.12.1"

[dependencies.regex-automata]
# Mimicking burntsushi's biff: https://github.com/BurntSushi/biff/blob/master/Cargo.toml
version = "0.4.9"
default-features = false
features = [
    "std",
    "syntax",
    "perf",
    "unicode",
    "meta",
    "nfa",
    "dfa-onepass",
    "hybrid",
]

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
