[workspace]
members = [
    ".",
    "crates/ip-extract",
]
resolver = "2"

[package]
name = "geoipsed"
version = "0.2.0"                                                       #:version
authors = ["Eric Hutchins"]
description = "Inline decoration of IPv4 and IPv6 address geolocations"
homepage = "https://github.com/erichutchins/geoipsed"
repository = "https://github.com/erichutchins/geoipsed"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["cli", "geoip", "dfir", "regex"]
license = "Unlicense OR MIT"
edition = "2021"

[lib]
name = "geoipsed"
path = "src/lib.rs"

[[bin]]
name = "geoipsed"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = false
debug-assertions = false
panic = "abort"
incremental = false
strip = true

[profile.dev-optimized]
inherits = "release"
debug = true            # Full debug info for symbols
strip = false           # Don't strip symbols

[dependencies]
anyhow = "1.0.101"
camino = "1.2.2"
clap = { version = "4.5.57", features = ["derive", "env", "unicode", "cargo"] }
maxminddb = { version = "0.27.1", features = ["mmap"] }
termcolor = "1.4.1"
thiserror = "2.0"
bstr = "1.12.1"
ip-extract = { path = "crates/ip-extract" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustc-hash = "1.1.0"
hashbrown = "0.16.1"
itoa = "1.0.17"
ryu = "1.0.23"
ripline = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
