[package]
name = "ip-extract"
version = "0.1.1" #:version
edition = "2021"
authors = ["Eric Hutchins"]
description = "High-performance IP address extraction and tagging engine"
license = "Unlicense OR MIT"
repository = "https://github.com/erichutchins/geoipsed"
homepage = "https://github.com/erichutchins/geoipsed"
documentation = "https://docs.rs/ip-extract"
keywords = ["ip", "extraction", "regex", "tagging", "parser"]
categories = ["text-processing", "network-programming"]

[dependencies]
regex-syntax = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
bstr = "1.12.1"
anyhow = "1.0.101"

[dependencies.regex-automata]
version = "0.4.9"
default-features = false
features = [
    "std",
    "syntax",
    "perf",
    "meta",
    "nfa",
    "dfa-onepass",
    "hybrid",
    "dfa",
    "perf-literal",
]

[build-dependencies]
regex-automata = { version = "0.4.9", features = ["std", "syntax", "dfa-build", "dfa-search", "nfa-thompson"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "ip_benchmark"
harness = false
