[package]
name = "ip-extract"
version = "0.1.2" #:version
edition = "2021"
authors = ["Eric Hutchins"]
description = "High-performance IP address extraction and tagging engine"
license = "Unlicense OR MIT"
repository = "https://github.com/erichutchins/geoipsed"
homepage = "https://github.com/erichutchins/geoipsed"
documentation = "https://docs.rs/ip-extract"
keywords = ["ip", "extraction", "regex", "tagging", "parser"]
categories = ["text-processing", "network-programming"]

[dependencies]
memchr = "2.7"
regex-syntax = "0.8.9"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bstr.workspace = true
anyhow.workspace = true

[dependencies.regex-automata]
version = "0.4.9"
default-features = false
features = [
    "std",
    "syntax",
    "perf",
    "meta",
    "nfa",
    "dfa-onepass",
    "hybrid",
    "dfa",
    "perf-literal",
]

[build-dependencies]
regex-automata = { version = "0.4.9", features = ["std", "syntax", "dfa-build", "dfa-search", "nfa-thompson"] }

[dev-dependencies]
criterion.workspace = true
rand = "0.8"

[[bench]]
name = "ip_benchmark"
harness = false
