[package]
name = "ipextract-py"
version = "0.2.0"
edition = "2021"
authors = ["Eric Hutchins"]
description = "Python bindings for ip-extract: high-performance IP address extraction"
license = "Unlicense OR MIT"
repository = "https://github.com/erichutchins/geoipsed"

[lib]
name = "_ipextract"
crate-type = ["cdylib"]

[dependencies]
ip-extract = { path = "../ip-extract" }
pyo3 = { version = "0.28", features = ["abi3-py310"] }
