[package]
name = "justips"
version = "0.1.1"
authors = ["Eric Hutchins"]
description = "Fast, standalone IP address extraction cli utility"
edition = "2021"
license = "Unlicense OR MIT"
repository = "https://github.com/erichutchins/geoipsed"
readme = "README.md"
keywords = ["ip", "extraction", "network", "security", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.21", features = ["derive"] }
ip-extract.workspace = true
ripline = "0.1.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
memchr = "2.8.0"
indexmap = "2"
